Add 'title' field to DownloadUIItem and thread through bridges to OfflinePageDownloadItem. Also call destroy() on the bridge to fix mem leak

BUG=638395,630817

Review-Url: https://codereview.chromium.org/2263753002
Cr-Commit-Position: refs/heads/master@{#413315}

Former-commit-id: a6e1def19ac161b674482e96e7d346dcfca2a92d