chrome/android/junit/src/org/chromium/chrome/browser/offlinepages/downloads/OfflinePageDownloadBridgeTest.java
@@ -140,8 +140,8 @@ public class OfflinePageDownloadBridgeTest {
     @Feature({"OfflinePages"})
     public void testOpenItemByGuid() {
         OfflinePageDownloadItem item = createDownloadItem1();
-        // Empty URL skips actual intent.
-        doReturn("").when(mBridge).nativeGetOfflineUrlByGuid(anyLong(), eq(item.getGuid()));
+        // null as URL skips actual intent so no tabs are attempted to be created.
+        doReturn(null).when(mBridge).nativeGetOfflineUrlByGuid(anyLong(), eq(item.getGuid()));
         mBridge.openItem(item.getGuid());
         verify(mBridge, times(1)).nativeGetOfflineUrlByGuid(eq(0L), eq(item.getGuid()));
     }
@@ -152,24 +152,26 @@ public class OfflinePageDownloadBridgeTest {
         List<OfflinePageDownloadItem> list = new ArrayList<>();
         OfflinePageDownloadItem item1 = createDownloadItem1();
         OfflinePageDownloadBridge.createDownloadItemAndAddToList(list, item1.getGuid(),
-                item1.getUrl(), item1.getTargetPath(), item1.getStartTimeMs(),
+                item1.getUrl(), item1.getTitle(), item1.getTargetPath(), item1.getStartTimeMs(),
                 item1.getTotalBytes());
         assertEquals(list.size(), 1);
 
         OfflinePageDownloadItem item2 = createDownloadItem2();
         OfflinePageDownloadBridge.createDownloadItemAndAddToList(list, item2.getGuid(),
-                item2.getUrl(), item2.getTargetPath(), item2.getStartTimeMs(),
+                item2.getUrl(), item2.getTitle(), item2.getTargetPath(), item2.getStartTimeMs(),
                 item2.getTotalBytes());
         assertEquals(list.size(), 2);
 
         assertEquals(list.get(0).getGuid(), item1.getGuid());
         assertEquals(list.get(0).getUrl(), item1.getUrl());
+        assertEquals(list.get(0).getTitle(), item1.getTitle());
         assertEquals(list.get(0).getTargetPath(), item1.getTargetPath());
         assertEquals(list.get(0).getStartTimeMs(), item1.getStartTimeMs());
         assertEquals(list.get(0).getTotalBytes(), item1.getTotalBytes());
 
         assertEquals(list.get(1).getGuid(), item2.getGuid());
         assertEquals(list.get(1).getUrl(), item2.getUrl());
+        assertEquals(list.get(1).getTitle(), item2.getTitle());
         assertEquals(list.get(1).getTargetPath(), item2.getTargetPath());
         assertEquals(list.get(1).getStartTimeMs(), item2.getStartTimeMs());
         assertEquals(list.get(1).getTotalBytes(), item2.getTotalBytes());
@@ -181,9 +183,11 @@ public class OfflinePageDownloadBridgeTest {
         OfflinePageDownloadItem item = createDownloadItem2();
         OfflinePageDownloadItem result =
                 OfflinePageDownloadBridge.createDownloadItem(item.getGuid(), item.getUrl(),
-                        item.getTargetPath(), item.getStartTimeMs(), item.getTotalBytes());
+                        item.getTitle(), item.getTargetPath(), item.getStartTimeMs(),
+                        item.getTotalBytes());
         assertEquals(result.getGuid(), item.getGuid());
         assertEquals(result.getUrl(), item.getUrl());
+        assertEquals(result.getTitle(), item.getTitle());
         assertEquals(result.getTargetPath(), item.getTargetPath());
         assertEquals(result.getStartTimeMs(), item.getStartTimeMs());
         assertEquals(result.getTotalBytes(), item.getTotalBytes());
@@ -191,14 +195,14 @@ public class OfflinePageDownloadBridgeTest {
 
     private OfflinePageDownloadItem createDownloadItem1() {
         return new OfflinePageDownloadItem("9a4703bd-7123-4e05-ad81-f70df8934e73",
-                "https://www.google.com/", "/storage/offline_pages/www.google.com.mhtml",
-                1467314220000L, 123456);
+                "https://www.google.com/", "test title 1",
+                "/storage/offline_pages/www.google.com.mhtml", 1467314220000L, 123456);
     }
 
     private OfflinePageDownloadItem createDownloadItem2() {
         return new OfflinePageDownloadItem("28b7dbad-7920-4ca7-809e-10ad111ef3b5",
-                "https://play.google.com/", "/storage/offline_pages/play.google.com.mhtml",
-                1467408960000L, 765432);
+                "https://play.google.com/", "test title 2",
+                "/storage/offline_pages/play.google.com.mhtml", 1467408960000L, 765432);
     }
 
     private List<OfflinePageDownloadItem> createDownloadItemList() {
